plugins {
	id 'org.springframework.boot' version '2.7.4'
	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
	id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'
targetCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// 메이븐 애플 로그인 플젝에서 가져온 것
	implementation 'org.apache.httpcomponents:httpclient'
	implementation 'com.nimbusds:nimbus-jose-jwt:3.10'
}

tasks.named('test') {
	useJUnitPlatform()
}

compileJava.options.compilerArgs.addAll([
		"--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED",
		"--add-exports=java.base/sun.security.util=ALL-UNNAMED",
		"--add-exports=java.base/sun.security.x509=ALL-UNNAMED",
])

compileJava {
	options.compilerArgs.addAll(['--release', '8'])
}